k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
  - name: goserver-service
    port: 80 #A porta do service que será acessada
    targetPort: 80 #A porta do container que está rodando a aplicação (que o service automaticamente redirecionará)
    protocol: TCP
